--- a/lab06/README
+++ b/lab06/README
@@ -1,10 +1,9 @@
 #DESCRIPTION
 Solutions for lab06
-has c files base2dec.c, lawn.c, randomSentence.c and strlength.c
-base2dec.c takes a base and power and prints the sum of the base and power
-lawn.c prints the ln calculation of a number between 0 and 1
-randomSentence.c produces a random sentence given multiple text files
-strlength.c produces the length of a given string
+has c files loadData.c, sec2hms.c, stats.c, question1.txt, and multiple txt files 
+stats.c checks an arrays values and prints the minimum value, max value and the mean value using pointers
+sec2hms.c takes a value and converts it into hours, minutes and seconds
+loadData.c takes a file and checks its format. it then takes the station number, temp and pressure and prints it
 #AUTHOR
 Name: Jeffrey Moniz
 Email: monizj4@mymacewan.ca
